# RoTrade

./: CMakeCache.txt  Makefile  README.md  RoTrade  cmake_install.cmake  main.lua  main.py  proofs.json  proofs.py  trade_utils.py
src/: CMakeLists.txt  auto_trade_poster.cpp  cli.cpp  data_query.cpp  feature_utils.h  main.cpp  trade_ads.cpp  trade_eval.cpp  trade_filter.cpp  web_scraper.cpp
