cmake_minimum_required(VERSION 3.10)
project(RoTrade LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(OpenSSL REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GUMBO REQUIRED IMPORTED_TARGET gumbo)
file(GLOB SOURCES "*.cpp")
add_executable(RoTrade ${SOURCES})
target_link_libraries(RoTrade PRIVATE OpenSSL::SSL OpenSSL::Crypto PkgConfig::GUMBO pthread)
